--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,3 +12,457 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.App {max-width: 1550px;
+min-height: 100vh;
+width: 100%;
+margin: 0 auto;
+box-shadow: 0 2px 6px #08a05ca4;
+padding: 0 15px;
+box-sizing: border-box;}
+
+/*-----------------------------------------HEADER-------------------------*/
+
+
+
+header {
+  width: 97%;
+min-height: 100px;
+max-width: 1530px;
+overflow: hidden;
+display: flex;
+justify-content: space-around;
+align-items: center;
+flex-wrap: wrap;
+position: fixed;
+box-sizing: border-box;
+background-color: white;
+box-shadow: 0 5px 10px #08a05c50;}
+
+
+a{color: black;
+text-decoration: none;
+text-transform: uppercase;}
+a.hover {color: #08a05c}
+
+li{ list-style: none;}
+
+header ul {display: flex;
+  padding: 0;
+  margin: 0;
+
+}
+
+header ul li { padding: 0 1rem;}
+
+header ul li a { font-weight: bold;}
+
+header .cart { position: relative;
+cursor: pointer;}
+
+header .cart box-icon{
+  width: 45px;
+  height: 45px;
+}
+
+header .cart span { 
+  position: absolute;
+top: -1rem;
+right: -1.5rem;
+width: 2.5rem;
+height: 2.5rem;
+border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
+color: white;
+padding: 0rem;
+font-size: 1.5rem;
+font-weight: 700;
+background-color: crimson;}
+
+/*----------------------PRODUCTOS---------------*/
+
+.title {
+  font-size: 2.4rem;
+  padding: 10rem 0 0 0;
+  color: #08a05c;
+}
+.Productos {
+  padding: 5rem 1rem;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(22rem , 1fr));
+  gap: 3rem 2rem;
+  box-sizing: border-box;
+}
+.producto {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 1px 10px 10px 2px rgb(0, 0, 0 , .2);
+  border: 6px solid transparent;
+  border-radius: 5px;
+}
+.producto:hover { border: 6px solid #08a05c;}
+
+.producto__img img {
+  width: 310px;
+}
+
+.producto__footer { 
+  padding: 1rem;
+}
+
+.producto__footer h1{
+  font-weight: 600;
+  font-size: 1.5rem;
+  color: #1a202c;
+  font-family: Helvetica, sans-serif;
+}
+
+.producto__footer p { 
+  font-weight: 700;
+  color: rgb(0, 0, 0 , .555);
+  text-transform: uppercase;
+  font-size: 18px;
+}
+
+.producto__footer .price {
+  font-size: 2rem;
+  color: #1a202c;
+}
+
+.producto .buttom{width: 100%;
+height: 45px;
+display: grid;
+grid-template-columns: 2fr 1fr;
+gap: 1rem 3rem;
+padding: 0 1rem;
+margin: 1rem;}
+
+
+.buttom .btn {
+  border: none;
+  outline: 0;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.buttom button { 
+  background-color: #3033d3;
+  max-width: 250px;
+  width: 100%;
+  font-size: 1.5rem;
+  color: white;
+  font-weight: 600;
+}
+
+.buttom div { 
+  background-color: #08a05c;
+  display: grid;
+  text-align: center;
+  align-items: center;
+  margin-left: -2rem;
+  border-radius: 5px;
+}
+
+.buttom div a { color: white;
+font-weight: 700}
+
+.buttom div a:hover{
+  color: white;
+}
+
+/*---------------MEDIA----------------*/
+
+
+@media only screen and (max-width: 1000px) {
+  .carrito__item{
+
+    width: 92%;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .carrito__item{
+
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+  }
+  .carrito__item h3{
+    font-size: 1.2rem;
+
+  }
+}
+
+@media only screen and (max-width:450px) {
+  .carrito__item h3{
+
+   display: .5rem;
+  }
+  .carrito__item .remove__item box-icon{
+    width: 30px;
+    height: 70px;
+
+  }
+}
+
+@media only screen and (max-width: 600px) {header ul{ display: none;}}
+
+
+
+
+
+
+/*-------------INICIO------------------------------*/
+
+.inicio{
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 9rem;
+}
+.inicio h1{
+  font-size: 2.5rem;
+  color: #08a05c;
+}
+.inicio img{ width: 100%;}
+
+
+
+/*----------------------------CARRITO-----------------------*/
+
+
+.carritos{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 300ms ease-in-out;
+  background-color: rgb(0,0,0 , .6);
+  z-index: 2;
+  padding-bottom: 5rem;
+  visibility: hidden;
+}
+
+.carrito{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%) scale(1);
+  width: 60%;
+  height: 80%;
+  border-radius: 8px;
+  overflow-x: scroll;
+  transition: all 300ms ease-in-out;
+  background-color: white;
+  opacity: 0; 
+  visibility: hidden;
+}
+
+.carrito h2{
+  text-align: center;
+  font-size: 2rem;
+}
+
+
+.carrito.show{
+  visibility: visible;
+}
+
+
+.carrito.show{
+  transform: translate(-50%, -50%) scale(1.1);
+  opacity: 1;
+  visibility: visible;
+}
+
+.carrito__close box-icon{
+  display: 	inline-block;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  transform: all 300ms ease-in-out;
+  margin: 3rem 0 0 2rem;
+}
+
+.carrito__close box-icon:hover{
+  fill: crimson;
+}
+
+.carrito__center{
+  width: 90%;
+  margin: 0 auto;
+ 
+
+}
+
+
+
+.carrito__item{
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr 1fr;
+  width: 80%;
+  margin: 2rem auto;
+  box-shadow: 0 1px 10px #08a05c;
+  border-radius: 5px;
+}
+
+.carrito__item img{
+  width: 9rem;
+}
+
+.carrito__item h3{
+
+  margin-top: 1.5rem;
+  font-weight:600 ;
+  font-size: 1.5rem;
+  font-family:  Helvetica, sans-serif;
+}
+
+.carrito__item .price{
+  color: #1a202c;
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: start;
+  margin-left: -1rem;
+
+}
+
+
+
+.carrito__item box-icon{
+  fill: #08a05c;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  margin-top: 3rem;
+}
+
+
+.carrito__item .cantidad{
+  font-size: 2rem;
+  font-weight: bold;
+}
+ 
+
+.carrito__item .remove__item box-icon{
+  width: 60px;
+  height: 80px;
+  fill: crimson;
+  margin-top: 2rem;
+
+}
+
+
+.carrito__footer { 
+ text-align: center;
+ margin-top: 3rem;
+}
+
+.carrito__footer h3{
+  font-size: 2rem;
+  font-weight: 700;
+  letter-spacing: 1px;
+
+}
+
+.carrito__footer .btn{
+  display: inline-block;
+  padding: 3rem 1rem;
+  font-size: 1.2rem;
+  background-color: #08a05c;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+
+}
+
+
+.carrito__footer .btn:hover{
+  background-color: #0f5c39;
+  color: white;
+}
+
+
+/*-------------------Form---------------------*/
+
+
+.div-form {
+  margin: 0;
+  padding: 0;
+  background: white;  
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title-form {
+  font-size: 2.5rem;
+  color: #08a05c;
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 9rem;
+}
+
+.form-mail {
+  width: 20rem;
+  border: groove 3px #ffff;
+  
+  box-shadow: -3px -2px 1px #0f5c39;
+  background: #232526;  
+  background: linear-gradient(to right, #414345, #232526);  
+  opacity: 0.8;  
+  padding: 5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+hr {
+  width: 20rem;
+}
+
+label {
+  font-size: 1.5rem;
+  color: #ffffff;
+  font-weight: 900;
+  margin-bottom: 0.5rem;
+}
+
+input {
+  font-size: 1rem;
+  background: transparent;
+  box-shadow: 0 -2px 2px rgb(199, 194, 194);
+  border-radius: 20px;
+  color: #ffff;
+}
+
+textarea {
+  border-radius: 10px;
+  background-color: #a3a8af;
+  padding: 0.5rem;
+}
+
+button {
+  width: 8rem;
+  border-radius: 20px;
+  font-size: 1.2rem;
+  color: green;
+  background-color: #9df59d;
+  cursor: pointer;
+}
+
+button:hover,
+button:focus {
+  background-color: green;
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: #ffff;
+}
+
+
+
